--- a/index/app/src/main/res/values/strings.xml
+++ b/index/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
         <item>Dhulo ko desh</item>
         <item>Dhulo ko desh</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
